force-app/main/default/objects/bofc__BOFCAuditHistoryItem__c/bofc__BOFCAuditHistoryItem__c.object-meta.xml
<CustomObject>
    <label>BOFCAuditHistoryItem</label>
    <nameField>
        <displayFormat>BAHI-{0000}</displayFormat>
        <label>BOFCAuditHistoryItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOFCAuditHistoryItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>