force-app/main/default/objects/bofc__BOFCAuditHistoryItem__c/fields/bofc__Action_Status__c.field-meta.xml
<CustomField>
    <fullName>bofc__Action_Status__c</fullName>
    <label>Action Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>