force-app/main/default/objects/bofc__BOFCAuditHistoryItem__c/fields/bofc__BOFCAuditHistory__c.field-meta.xml
<CustomField>
    <fullName>bofc__BOFCAuditHistory__c</fullName>
    <label>BOFCAuditHistory</label>
    <referenceTo>bofc__BOFCAuditHistory__c</referenceTo>
    <relationshipLabel>BOFCAuditHistoryItems</relationshipLabel>
    <relationshipName>BOFCAuditHistoryItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>