force-app/main/default/objects/bofc__BOFCAuditHistoryItem__c/fields/bofc__Item_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Item_Name__c</fullName>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>